BuildValiantの設定（V2署名無効化(有効にするとV1署名付与されないので..)）
Change-Id: I0d44f18478dc3dbc5895d229c05d2790d62a552a

--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -27,6 +27,7 @@ android {
             storePassword 'spmode20100901'
             keyAlias 'dcmeval2048'
             keyPassword 'dcmeval2048'
+            v2SigningEnabled false
         }
     }
     buildTypes {
