[DREM-32-1]ペアリング(STB未検出時の動作)
UI実装を行いました

Change-Id: I32d7110e941057babfe49c073bc54d0e582014cb

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -78,10 +78,16 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.launch.STBSelectActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/STBTheme"/>
         <activity
             android:name=".activity.launch.TutorialActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.launch.ParingHelpActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.launch.STBSelectErrorActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/STBTheme"/>
         <!-- ======================================  Launch グループ End ====================================== -->
 
 
