DREM-1203 [実装]([DREM-32-3]STB登録アカウントチェック)実装（STBアカウントチェック）
アプリ起動時に、各種ステータスやOTT等を確認・取得するための画面を追加

Change-Id: I98c7b3cb162f77807cc5809c360feab322cc48b2

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -71,6 +71,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activity.launch.CheckStatusActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.launch.STBConnectActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -194,7 +197,8 @@
                 <action android:name="com.nttdocomo.android.idmanager.action.DOCOMOID_LINKED_LINE" />
             </intent-filter>
         </receiver>
-        <service android:name=".service.download.DownloadService"/>
+
+        <service android:name=".service.download.DownloadService" />
     </application>
 
 </manifest>
