DREM-3-3 ■録画コンテンツ持ち出し機能（動作確認中、修正中、Dtcpはサービスに移動）
Change-Id: I66308a5b43a104afa0388f3cdd8c8dfe982cffb4

--- a/dTVTerminalApp/app/CMakeLists.txt
+++ b/dTVTerminalApp/app/CMakeLists.txt
@@ -254,6 +254,8 @@ add_library(
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaBSDigitalXmlParser.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/download/downloader.cc
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/download/dmspu_cipher_file.cc
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/download/DlnaDownload.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/download/DlnaJniCastDl.cpp
      )
 
 # 目標ライブラリをリンク
