DREM-3-3 ■コンテンツ持ち出し（お客様提供したLogを追加した）
Change-Id: I25e1eb4a5ad57e06b2a4ce6b08ed2e973a911758

--- a/dTVTerminalApp/app/CMakeLists.txt
+++ b/dTVTerminalApp/app/CMakeLists.txt
@@ -256,6 +256,7 @@ add_library(
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/download/dmspu_cipher_file.cc
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/download/DlnaDownload.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/download/DlnaJniCastDl.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/android_log_handler.c
      )
 
 # 目標ライブラリをリンク
