DREM-1492 [実装]([DREM-51-4] 設定画面（最新版反映）)実装 各設定項目の作成
Change-Id: Ia4def5ac63ab9332717cedccc77c9322a1a63b2e

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -104,6 +104,21 @@
         <activity
             android:name=".activity.other.SettingImageQualityActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.SettingMenuAppActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.SettingMenuFaqActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.SettingMenuLicenseActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.SettingMenuPrivacyPolicyActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.SettingMenuTermsOfServiceActivity"
+            android:screenOrientation="portrait" />
         <!-- ======================================  Other グループ End ====================================== -->
 
 
