[DREM-42]アプリケーション情報
Change-Id: I269c02d3f57f8096488f632b1fe93107eba45a2c

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -104,6 +104,9 @@
         <activity
             android:name=".activity.other.SettingImageQualityActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.ApplicationInfoActivity"
+            android:screenOrientation="portrait" />
         <!-- ======================================  Other グループ End ====================================== -->
 
 
