DREM-881 [DREM-32-5]初回起動ペアリング(ヘルプページ) 初回起動ペアリング(ヘルプページ)の実装,スペル間違いの修正
Change-Id: Ic6a4c43c077a54c98ca0364a46d131e0fbab9b6e

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
         <activity
             android:name=".activity.launch.TutorialActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.launch.ParingHelpActivity"
+        <activity android:name=".activity.launch.PairingHelpActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.launch.STBSelectErrorActivity"
             android:screenOrientation="portrait"
