--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -94,34 +94,34 @@
 
         <!-- ====================================== Other グループ Begin ====================================== -->
         <activity
-            android:name=".activity.other.NewsActivity"
+            android:name=".activity.setting.NewsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.NewsDetailActivity"
+            android:name=".activity.setting.NewsDetailActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.SettingActivity"
+            android:name=".activity.setting.SettingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.SettingImageQualityActivity"
+            android:name=".activity.setting.SettingImageQualityActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.ApplicationInfoActivity"
+            android:name=".activity.setting.ApplicationInfoActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.SettingMenuAppActivity"
+            android:name=".activity.setting.SettingMenuAppActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.SettingMenuFaqActivity"
+            android:name=".activity.setting.SettingMenuFaqActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.SettingMenuLicenseActivity"
+            android:name=".activity.setting.SettingMenuLicenseActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.SettingMenuPrivacyPolicyActivity"
+            android:name=".activity.setting.SettingMenuPrivacyPolicyActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.other.SettingMenuTermsOfServiceActivity"
+            android:name=".activity.setting.SettingMenuTermsOfServiceActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Other グループ End ====================================== -->
 
