ビルド時の非推奨API警告表示、ビルド高速化をgradleに反映.
Change-Id: Ibb7ef09ede61b8de9e74483554329c7ac3dccabd

--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -30,6 +30,10 @@ android {
             v2SigningEnabled false
         }
     }
+    dexOptions {
+        javaMaxHeapSize "2g"
+        dexInProcess true
+    }
     buildTypes {
         // 未署名、debug・Log OFF
         unsigned_off {
