--- a/dTVTerminalApp/build.gradle
+++ b/dTVTerminalApp/build.gradle
@@ -17,6 +17,11 @@ allprojects {
         jcenter()
         maven { url 'https://maven.google.com' }
     }
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:deprecation"
+        }
+    }
 }
 
 task clean(type: Delete) {
