--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="com.nttdocomo.android.idmanager.permission.GET_ID_STATE"/>
 
     <application
+        android:name="com.nttdocomo.android.tvterminalapp.application.TvtApplication"
         xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="false"
         android:icon="@mipmap/icd_app_tvterminal"
