--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
             android:name=".activity.launch.DAccountSettingHelpActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.launch.DAccountInductionActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.launch.LaunchActivity"
             android:screenOrientation="portrait">
             <intent-filter>
