DREM-605 [DREM-55]apk難読化対応 dash-oプロジェクトファイルを登録、proguardは利用しないのですべて無効化
Change-Id: Id6ae4c76646b18994b46f7b68f77f88358e790a5

--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -59,7 +59,7 @@ android {
         unsigned_off {
             debuggable false
             jniDebuggable false
-            minifyEnabled true
+            minifyEnabled false
             versionNameSuffix revison_device_num + "0" + revison_osver_num + revison_end_num
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             externalNativeBuild {
@@ -92,7 +92,7 @@ android {
         signed_off {
             debuggable false
             jniDebuggable false
-            minifyEnabled true
+            minifyEnabled false
             versionNameSuffix revison_device_num + "2" + revison_osver_num + revison_end_num
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.dcmeval
@@ -127,7 +127,7 @@ android {
         _unsigned_off {
             debuggable false
             jniDebuggable false
-            minifyEnabled true
+            minifyEnabled false
             versionNameSuffix revison_device_num + "4" + revison_osver_num + revison_end_num
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             externalNativeBuild {
@@ -160,7 +160,7 @@ android {
         _signed_off {
             debuggable false
             jniDebuggable false
-            minifyEnabled true
+            minifyEnabled false
             versionNameSuffix revison_device_num + "6" + revison_osver_num + revison_end_num
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.dcmeval
