DREM-1525 [実装]([DREM‐56]アプリ起動時の海外判定処理追加)実装（UI） DREM-1524 [実装]([DREM‐56]アプリ起動時の海外判定処理追加)実装(アプリケーションとしてのBG→FG判定)
・Permission取得のためのダイアログを追加
・Permission取得要求ダイアログを追加
・BaseActivityにて海外通信警告ダイアログを修正
・海外通信及びPermission不許可時のダイアログを追加
・Applicationクラスの実装修正

Change-Id: I8e39f811a86685edf06a328923eaee05243725b5

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 海外通信判定処理に必要 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-permission android:name="com.nttdocomo.android.idmanager.permission.serviceapp.IDimServiceAppService"/>
 
