DREM-270 プレミアムビデオ一覧
プレミアムビデオ一覧追加

Change-Id: I8b3e30ed138f635214e971639a7a3ef350529d36

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
             android:name=".activity.home.RentalListActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.home.PremiumVideoActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.home.WatchingVideoListActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Home グループ End ====================================== -->
