--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -7,8 +7,6 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 海外通信判定処理に必要 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
@@ -29,43 +27,54 @@
         android:roundIcon="@mipmap/icd_app_tvterminal"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:resizeableActivity="false" tools:targetApi="24">
+        android:resizeableActivity="false"
+        tools:targetApi="24">
 
         <!-- ====================================== Home グループ Begin ====================================== -->
         <activity
             android:name=".activity.home.HomeActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.home.ClipListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.home.RecommendActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.home.RecordedListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.home.RecordReservationListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.home.RentalListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.home.WatchingVideoListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Home グループ End ====================================== -->
 
 
         <!-- ===================================== Launch グループ Begin ===================================== -->
         <activity
             android:name=".activity.launch.DAccountReSettingActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.launch.DAccountSettingHelpActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.launch.DAccountInductionActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.launch.LaunchActivity"
             android:screenOrientation="portrait">
@@ -76,78 +85,99 @@
         </activity>
         <activity
             android:name=".activity.launch.STBConnectActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.launch.STBSelectActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/STBTheme"/>
+            android:theme="@style/STBTheme"
+            android:exported="false" />
         <activity
             android:name=".activity.launch.TutorialActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity android:name=".activity.launch.PairingHelpActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity android:name=".activity.launch.STBSelectErrorActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/STBTheme"/>
+            android:theme="@style/STBTheme"
+            android:exported="false" />
         <!-- ======================================  Launch グループ End ====================================== -->
 
 
         <!-- ====================================== Other グループ Begin ====================================== -->
         <activity
             android:name=".activity.setting.NewsActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.NewsDetailActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.SettingActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.SettingImageQualityActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.ApplicationInfoActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.SettingMenuAppActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.SettingMenuFaqActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.SettingMenuLicenseActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.SettingMenuPrivacyPolicyActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.setting.SettingMenuTermsOfServiceActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Other グループ End ====================================== -->
 
 
         <!-- ====================================== Player グループ Begin ====================================== -->
-        <activity android:name=".activity.detail.ChannelDetailPlayerActivity" />
+        <activity android:name=".activity.detail.ChannelDetailPlayerActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.detail.ContentDetailActivity"
             android:configChanges="keyboardHidden|keyboard|orientation|screenSize"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Player グループ End ====================================== -->
 
 
         <!-- ====================================== Ranking グループ Begin ====================================== -->
         <activity
             android:name=".activity.ranking.DailyTvRankingActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.ranking.RankingTopActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.ranking.VideoRankingActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.ranking.WeeklyTvRankingActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Ranking グループ End ====================================== -->
 
 
@@ -155,33 +185,40 @@
 
         <activity
             android:name=".activity.search.SearchTopActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Search グループ End ====================================== -->
 
 
         <!-- ====================================== TvProgram グループ Begin ====================================== -->
         <activity
             android:name=".activity.tvprogram.ChannelListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.tvprogram.MyChannelEditActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.tvprogram.TvProgramListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.tvprogram.WeekTvProgramListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  TvProgram グループ End ====================================== -->
 
 
         <!-- ====================================== Video グループ Begin ====================================== -->
         <activity
             android:name=".activity.video.VideoContentListActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity
             android:name=".activity.video.VideoTopActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Video グループ End ====================================== -->
 
         <!-- dアカウントの状況変化を受け取るレシーバー -->
@@ -197,7 +234,8 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".service.download.DownloadService" />
+        <service android:name=".service.download.DownloadService"
+            android:exported="false" />
     </application>
 
 </manifest>
