DREM-1631 アプリ起動時の海外判定処理追加)通信中断・再開処理（マイ番組表編集）の対応(CHリスト選択画面を乗せるactivityに直してstatusBar調整済み)
Change-Id: I094398d16fa203fa634aa7a2b4d0fdd34f146dad

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -170,6 +170,9 @@
             android:name=".activity.tvprogram.MyChannelEditActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.tvprogram.SelectChannelActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.tvprogram.TvProgramListActivity"
             android:screenOrientation="portrait" />
         <activity
