レビュー指摘対応　「ranking」「setting」「tvprogram」一部
Change-Id: I8dcbafa596382682a1d9fb0c0f3b5fa881fbe673

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -114,43 +114,48 @@
         <activity
             android:name=".activity.setting.NewsActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
-        <activity
-            android:name=".activity.setting.NewsDetailActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.SettingActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+	        android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.SettingImageQualityActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+	        android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.ApplicationInfoActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.SettingMenuAppActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+	        android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.SettingMenuFaqActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+	        android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.SettingMenuLicenseActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+	        android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.SettingMenuPrivacyPolicyActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+	        android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.setting.SettingMenuTermsOfServiceActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+	        android:hardwareAccelerated="false"/>
         <!-- ======================================  Other グループ End ====================================== -->
 
 
